// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pop redirect to current URL:  - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": undefined,
    "url": "/",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/third",
    "search": "",
    "state": Object {},
    "url": "/third",
  },
]
`;

exports[`pop redirect to current URL:  - history_index 1`] = `2`;

exports[`pop redirect to current URL:  - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": undefined,
        "url": "/",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "backward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": undefined,
            "url": "/",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/third",
            "search": "",
            "state": Object {},
            "url": "/third",
          },
        ],
        "index": 1,
        "kind": "back",
        "length": 3,
        "pathname": "/second",
        "pop": true,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "index": 1,
    "kind": "back",
    "length": 3,
    "pathname": "/third",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/",
          "search": "",
          "state": undefined,
          "url": "/",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": Object {},
          "url": "/second",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": Object {},
          "url": "/third",
        },
      ],
      "hash": "",
      "index": 2,
      "kind": "push",
      "length": 3,
      "params": Object {},
      "pathname": "/third",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "THIRD",
      "url": "/third",
    },
    "scene": "",
    "search": "",
    "status": 302,
    "url": "/third",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "THIRD",
}
`;

exports[`pop redirect to current URL:  - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pop redirect to current URL:  - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pop redirect to current URL:  - routes - SECOND - beforeEnter 1`] = `2`;

exports[`pop redirect to current URL:  - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": undefined,
        "url": "/",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "backward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": undefined,
            "url": "/",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/third",
            "search": "",
            "state": Object {},
            "url": "/third",
          },
        ],
        "index": 1,
        "kind": "back",
        "length": 3,
        "pathname": "/second",
        "pop": true,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "hash": "",
    "index": 2,
    "kind": "push",
    "length": 3,
    "params": Object {},
    "pathname": "/third",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/",
          "search": "",
          "state": undefined,
          "url": "/",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": Object {},
          "url": "/second",
        },
      ],
      "hash": "",
      "index": 1,
      "kind": "push",
      "length": 2,
      "params": Object {},
      "pathname": "/second",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "SECOND",
      "url": "/second",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "THIRD",
    "universal": false,
    "url": "/third",
  },
  "title": "@@skiprudy/SET_FROM - {\\"ref\\":{\\"type\\":\\"SECOND\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"basename\\":\\"\\",\\"state\\":{},\\"location\\":{\\"url\\":\\"/second\\",\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"scene\\":\\"\\",\\"direction\\":\\"backward\\",\\"status\\":200,\\"kind\\":\\"back\\",\\"entries\\":[{\\"url\\":\\"/\\",\\"key\\":\\"345678\\",\\"basename\\":\\"\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"hash\\":\\"\\"},{\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"state\\":{},\\"key\\":\\"345678\\",\\"url\\":\\"/second\\",\\"basename\\":\\"\\"},{\\"pathname\\":\\"/third\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"state\\":{},\\"key\\":\\"345678\\",\\"url\\":\\"/third\\",\\"basename\\":\\"\\"}],\\"index\\":1,\\"length\\":3,\\"pop\\":true}}}",
}
`;

exports[`pop redirect to current URL:  - title 1`] = `"THIRD"`;
